startpage in .htaccess

--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,7 @@ RewriteEngine on
 
 RewriteBase /
 
+RewriteRule ^$ /seolinks/about?%{QUERY_STRING} [L]
 RewriteRule ^seolinks/about$ app/rendercontroller?id=23&%{QUERY_STRING} [L]
 RewriteRule ^seolinks/service$ app/rendercontroller?id=42&%{QUERY_STRING} [L]
 RewriteRule ^seolinks/aktuelles$ app/rendercontroller?id=43&%{QUERY_STRING} [L]
