--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,8 @@ RewriteEngine on
 
 RewriteBase /
 
+RewriteRule ^backend$ /backend/elementstree?json=0&id=1&%{QUERY_STRING} [L]
+
 RewriteRule ^$ /seolinks/about?%{QUERY_STRING} [L]
 RewriteRule ^seolinks/about$ app/rendercontroller?id=23&%{QUERY_STRING} [L]
 RewriteRule ^seolinks/service$ app/rendercontroller?id=42&%{QUERY_STRING} [L]
