--- a/.htaccess
+++ b/.htaccess
@@ -17,6 +17,21 @@ RewriteRule ^seolinks/portrait$ app/rendercontroller?id=116&%{QUERY_STRING} [L]
 RewriteRule ^seolinks/bewerbungsbilder_tipps$ app/rendercontroller?id=126&%{QUERY_STRING} [L]
 RewriteRule ^seolinks/bewerbungsbilder_formelle_regeln$ app/rendercontroller?id=136&%{QUERY_STRING} [L]
 RewriteRule ^seolinks/bewerbungsbilder_deckblatt$ app/rendercontroller?id=146&%{QUERY_STRING} [L]
+RewriteRule ^seolinks/hochzeiten_vorbereitungen_getting_ready$ app/rendercontroller?id=166&%{QUERY_STRING} [L]
+RewriteRule ^seolinks/hochzeiten_hochzeitszeremonie$ app/rendercontroller?id=187&%{QUERY_STRING} [L]
+RewriteRule ^seolinks/hochzeiten_brautpaarshooting$ app/rendercontroller?id=204&%{QUERY_STRING} [L]
+RewriteRule ^seolinks/hochzeiten_festlichkeiten$ app/rendercontroller?id=220&%{QUERY_STRING} [L]
+RewriteRule ^seolinks/hochzeiten_standesamtliche_trauung$ app/rendercontroller?id=238&%{QUERY_STRING} [L]
+RewriteRule ^seolinks/hochzeiten_quadrokopter_luftaufnahmen_aus_der_vogelperspektive$ app/rendercontroller?id=254&%{QUERY_STRING} [L]
+RewriteRule ^seolinks/hochzeiten_zusatzleistungen$ app/rendercontroller?id=286&%{QUERY_STRING} [L]
+RewriteRule ^seolinks/studie-0$ app/rendercontroller?id=317&%{QUERY_STRING} [L]
+RewriteRule ^seolinks/studie-1$ app/rendercontroller?id=334&%{QUERY_STRING} [L]
+RewriteRule ^seolinks/studie-2$ app/rendercontroller?id=346&%{QUERY_STRING} [L]
+RewriteRule ^seolinks/studie-3$ app/rendercontroller?id=358&%{QUERY_STRING} [L]
+RewriteRule ^seolinks/studie-4$ app/rendercontroller?id=370&%{QUERY_STRING} [L]
+RewriteRule ^seolinks/studie-5$ app/rendercontroller?id=382&%{QUERY_STRING} [L]
+RewriteRule ^seolinks/studie-6$ app/rendercontroller?id=394&%{QUERY_STRING} [L]
+RewriteRule ^seolinks/studie-7$ app/rendercontroller?id=406&%{QUERY_STRING} [L]
 RewriteRule ^seolinks/root$ app/rendercontroller?id=1&%{QUERY_STRING} [L]
 
 RewriteRule ^app$ index.php?action=&%{QUERY_STRING} [L]
